[searchbox] NTP realbox UI fixes.
This change fixes:
1. Input text moving up a bit when going from searchbox to AIM.
2. Extra padding was present below dropdown in TallTopContext mode.
Screen Recording:
Before: http://screencast/cast/NjEzMzA5MjUyNjg1MDA0OHwzOTYwZDUxNi1lZA
After: http://screencast/cast/NDc2MTMzMDk3NTI0NDI4OHwzZmQzMzYxMS00ZQ

Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7418483
Commit-Queue: Roman Arora <romanarora@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1567422}

--- a/ui/webui/resources/cr_components/searchbox/searchbox.css
+++ b/ui/webui/resources/cr_components/searchbox/searchbox.css
@@ -493,7 +493,7 @@ cr-searchbox-dropdown::part(dropdown-content) {
 
 :host([searchbox-layout-mode^='Tall']) input {
   height: 44px;
-  padding-top: var(--cr-searchbox-input-padding-top_);
+  padding-top: 14px;
 }
 
 :host([multi-line-enabled][searchbox-layout-mode^='Tall']) textarea {
@@ -518,10 +518,6 @@ cr-searchbox-dropdown::part(dropdown-content) {
 
 :host-context([searchbox-layout-mode^='Tall']) #composeButton {
   --cr-button-height: 36px;
-}
-
-:host([searchbox-layout-mode='TallBottomContext'][dropdown-is-visible]) contextual-entrypoint-and-carousel::part(context-menu-and-tools) {
-  margin-top: 10px;
 }
 
 :host-context([searchbox-layout-mode='TallTopContext']) contextual-entrypoint-and-carousel::part(carousel-divider) {
